add product to cart and get cart info
